fix cancel crash; fix navi back crash

--- a/todo
+++ b/todo
@@ -8,3 +8,5 @@
 7. how to use r2 on ios?
     the cydia version failed.
 8. how to markasviewed at the source rather than in the MailboxContentViewController.
+9. understand the theos framework/library build. whats the difference between
+framework and library.
